--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ i span {
     position: absolute;
     font-size: 16px;
     background: #fff;
-    color: green;
+    color: #198754;
     padding: 2px 6px;
     border-radius: 100%;
     top: -16px;
